--- a/Model_Vancomycin.ipynb
+++ b/Model_Vancomycin.ipynb
@@ -2,44 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 2,
    "id": "553b2c1c-ea5a-4391-b29d-110040e8f2f2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[10.20408163  9.52832759  8.89732461  8.30810911  7.75791376  7.24415448\n",
-      "  6.76441835  6.31645221  5.89815213  5.50755352  5.14282187  4.80224416\n",
-      " 14.60474615 13.63756296 12.7344304  11.8911068  11.10363138 10.36830565\n",
-      "  9.68167605  9.04051774  8.44181943  7.88276926  7.36074157  6.87328458\n",
-      " 16.45576207 15.36599739 14.34840118 13.39819415 12.51091353 11.68239209\n",
-      " 10.90873857 10.1863194   9.51174164  8.88183705  8.29364719  7.74440956\n",
-      " 17.18700424 16.04881385 14.98599887 13.99356764 13.06685907 12.20152075\n",
-      " 11.3934885  10.6389673   9.93441344  9.27651787  8.66219072  8.0885467\n",
-      " 17.42683078 16.27275815 15.19511271 14.18883314 13.24919333 12.37178012\n",
-      " 11.55247264 10.78742289 10.07303772  9.40596191  8.78306247  8.20141385\n",
-      " 17.45137048 16.29567274 15.2165098  14.20881323 13.26785026 12.38920152\n",
-      " 11.56874033 10.80261327 10.08722213  9.41920698  8.79543039  8.21296272\n",
-      " 17.38196366 16.2308623  15.15599136 14.15230256 13.21508195 12.33992773\n",
-      " 11.52272964 10.75964959 10.04710367  9.38174532  8.76044959  8.18029849\n",
-      " 17.27192833 16.12811394 15.0600474  14.06271239 13.13142478 12.26181067\n",
-      " 11.44978579 10.69153637  9.98350117  9.32235483  8.70499217  8.12851367\n",
-      " 17.14468994 16.00930177 14.94910343 13.95911556]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 260,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -80,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 10,
    "id": "827f8fb4-e48d-4c90-a5af-d2ca28ed1624",
    "metadata": {},
    "outputs": [],
@@ -104,14 +70,14 @@
     " 17.27192833, 16.12811394, 15.0600474,  14.06271239, 13.13142478, 12.26181067,\n",
     " 11.44978579, 10.69153637,  9.98350117,  9.32235483,  8.70499217,  8.12851367,\n",
     " 17.14468994, 16.00930177, 14.94910343, 13.95911556]\n",
-    "len(car)\n",
+    "\n",
     "time_Vancomycin = np.linspace(0, 124, 124)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 12,
    "id": "f64c59e3-4241-4d73-b72e-a8049c4c07f6",
    "metadata": {},
    "outputs": [
@@ -241,12 +207,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0cc9313e-8c7f-445a-acc2-51c8ce46b118",
+   "cell_type": "markdown",
+   "id": "111a2561-d1c3-4951-9847-785c12dde5f6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## The interp function in Python, specifically from the numpy library (numpy.interp), is used for one-dimensional linear interpolation. It allows you to estimate intermediate values within a given range based on known data points. This is particularly useful when you have a set of discrete data points and you want to find a value between them.\n",
+    "\n",
+    "## How numpy.interp Works\n",
+    "## The function numpy.interp(x, xp, fp) takes the following parameters:\n",
+    "\n",
+    "# x: The x-coordinates at which you want to interpolate.\n",
+    "# xp: The x-coordinates of the data points you know (must be in ascending order).\n",
+    "# fp: The y-coordinates of the data points you know, corresponding to xp."
+   ]
   },
   {
    "cell_type": "code",
