param values now expressed as a function

--- a/test_model.ipynb
+++ b/test_model.ipynb
@@ -155,12 +155,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f16efc78-a08a-4ed7-adfa-f34f196d43ad",
+   "cell_type": "markdown",
+   "id": "9f526188-812f-4f08-a6aa-910538014296",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## interp function length of all 3 vectors must be same otherwise get value error returned"
+   ]
   },
   {
    "cell_type": "code",
