--- a/combined_model.ipynb
+++ b/combined_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "53f37e4d",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
     "    linez_end = linez_start + linezolid_duration\n",
     "\n",
     "    # Create specific dosing times for Linezolid\n",
-    "    linezolid_dosing_times = np.arange(linez_start, linez_end, tau_linezolid)\n",
+    "    #linezolid_dosing_times = np.arange(linez_start, linez_end, tau_linezolid)\n",
     "\n",
     "    # Calculate Drug Concentrations\n",
     "    conc_vancomycin = concentration(\n",
@@ -92,7 +92,7 @@
     "    )\n",
     "    conc_linezolid = concentration(\n",
     "        time, D_linezolid, V_linezolid, Ke_linez, tau_linezolid, \n",
-    "        linez_start, linez_end, linezolid_dosing_times\n",
+    "        linez_start, linez_end\n",
     "    )\n",
     "\n",
     "    # Rest of the code remains the same as in previous version\n",
