--- a/ATB_Model_2.ipynb
+++ b/ATB_Model_2.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "d3e16fe8-d813-4828-a533-1e7c8bef103a",
    "metadata": {},
    "outputs": [
@@ -349,9 +349,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
