--- a/Model_3b.ipynb
+++ b/Model_3b.ipynb
@@ -1,29 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "82d92d37-b2b8-4d14-be8f-19c66d683745",
-   "metadata": {},
-   "source": [
-    "## Model One\n",
-    "\n",
-    "\n",
-    "Two bacterial populations, sensitive and resistant wit seperate EC_50 for each antibitoic.\\\n",
-    "No antibiotic period = 48 hours.  This is the time period when both sensitive and resistant bacteria grow unopposed.\\\n",
-    "Vancomycin initial treatment duration = 72 hours at which point it is discontinued and Linezolid statred.\\\n",
-    "Linezolid continue for 96 hours.  Total sim time = 250 hours\\\n",
-    "Vancomycin dosing 500 mg q 12 hours\\\n",
-    "Linezolid dosing 800 mg q 8 hours\n",
-    "\n",
-    "\n",
-    "Linezolid is bacteriostatic\\\n",
-    "Vancomycin is bacteriostatic or bactericidal"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e2521be0-938a-4ce0-ae72-2be0a1de9239",
+   "execution_count": null,
+   "id": "fb7bdf47-76ff-4959-adfa-853b336714e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,6 +60,7 @@
     "def simulate_drug_dynamics(\n",
     "    EC_50_vanco,\n",
     "    EC_50_linez,\n",
+    "    fitness_cost=0.2,\n",
     "    initial_sensitive=50,\n",
     "    initial_resistant=50,\n",
     "    no_drug_period=48,\n",
@@ -101,7 +82,7 @@
     "    \n",
     "    # Population Dynamics Parameters\n",
     "    rho_sensitive = 0.03\n",
-    "    rho_resistant = rho_sensitive\n",
+    "    rho_resistant = rho_sensitive * (1 - fitness_cost)\n",
     "    delta_sensitive, delta_resistant = 0.006, 0.006\n",
     "    max_drug_effect_vanco, max_drug_effect_linez = 0.8, 0.9\n",
     "    k = 1e5\n",
@@ -147,7 +128,7 @@
     "    plt.plot(time, solution.y[1], label=f'Resistant Population (ρ={rho_resistant:.2f})')\n",
     "    plt.axvline(no_drug_period, color='g', linestyle='--', label='Vancomycin Start')\n",
     "    plt.axvline(no_drug_period + pk_model.van_duration, color='r', linestyle='--', label='Linezolid Start')\n",
-    "    plt.title(f'Population Dynamics')\n",
+    "    plt.title(f'Population Dynamics (Resistance Fitness Cost: {fitness_cost*100}%)')\n",
     "    plt.xlabel('Time (hours)')\n",
     "    plt.ylabel('Population')\n",
     "    plt.legend()\n",
@@ -186,6 +167,7 @@
     "solution, time, van_conc, lzd_conc = simulate_drug_dynamics(\n",
     "    EC_50_vanco=0.8,\n",
     "    EC_50_linez=2.0,  # Increased to a more realistic value\n",
+    "    fitness_cost=0.3,\n",
     "    no_drug_period=48  # 48-hour no-drug period\n",
     ")"
    ]
@@ -193,71 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6080714c-7806-4745-86f8-a3377c0fcbe3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca83641f-b0dc-4b55-be5b-8dfcfb6f6426",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "88cd3835-64fd-4644-9aa6-046ba818dc20",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dee7f958-c259-4ea7-b871-78a9fb613664",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5c96d96-a2f4-4c2d-8499-687f9ddd133a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f5bd258-d33e-4ef8-b867-cbc6eaa3429a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34f25cfb-7fa8-423b-b2b0-ef531fea56ec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "676c9ea1-5079-401a-8e68-e093e2eb8522",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21d00ba9-80d3-4c9e-b689-453cd3f8bdb4",
+   "id": "d015f2ff-592c-4891-9ea8-0a6643d5ba48",
    "metadata": {},
    "outputs": [],
    "source": []
