--- a/Model03.02.25.ipynb
+++ b/Model03.02.25.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "id": "0f2aa3fa-9a89-45c1-a724-1743b67e659e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,18 +16,24 @@
     "class PharmacokineticModel:\n",
     "    def __init__(self):\n",
     "        # Vancomycin parameters\n",
-    "        self.van_dose = 500  # mg\n",
-    "        self.van_interval = 12  # hours\n",
+    "        self.van_dose = 1000  # mg (increased to 1000 mg)\n",
+    "        self.van_interval = 8   # hours (reduced from 12 to 8 hours)\n",
     "        self.van_duration = 72  # hours\n",
     "        self.van_ke = 0.173  # elimination rate constant (based on ~4h half-life)\n",
     "        self.van_volume = 50  # distribution volume (L)\n",
     "\n",
-    "        # Linezolid parameters\n",
-    "        self.lzd_dose = 800  # mg\n",
-    "        self.lzd_interval = 8  # hours\n",
+    "        # Linezolid parameters - updated to reflect clinical dosing\n",
+    "        self.lzd_dose = 600  # mg (standard clinical dose)\n",
+    "        self.lzd_interval = 12  # hours (twice daily dosing)\n",
     "        self.lzd_duration = 192  # hours\n",
-    "        self.lzd_ke = 0.139  # elimination rate constant (based on ~5h half-life)\n",
-    "        self.lzd_volume = 50  # distribution volume (L)\n",
+    "        self.lzd_ke = 0.116  # elimination rate constant (based on ~6h half-life)\n",
+    "        self.lzd_volume = 40  # distribution volume (L) - closer to clinical values\n",
+    "\n",
+    "        # Therapeutic ranges\n",
+    "        self.van_therapeutic_min = 10  # mg/L (trough)\n",
+    "        self.van_therapeutic_max = 20  # mg/L (trough)\n",
+    "        self.lzd_therapeutic_min = 2   # mg/L (trough)\n",
+    "        self.lzd_therapeutic_max = 8   # mg/L (trough)\n",
     "\n",
     "    def calculate_concentrations(self, drug_type, start_time=0):\n",
     "        if drug_type == 'vancomycin':\n",
@@ -64,6 +71,7 @@
     "    initial_resistant=50,\n",
     "    no_drug_period=48,\n",
     "    total_simulation_time=300,\n",
+    "    show_plots=False,\n",
     "):\n",
     "    # Create PK model and get drug concentrations\n",
     "    pk_model = PharmacokineticModel()\n",
@@ -83,7 +91,7 @@
     "    rho_sensitive = 0.03\n",
     "    rho_resistant = rho_sensitive * (1 - fitness_cost)\n",
     "    delta_sensitive, delta_resistant = 0.006, 0.006\n",
-    "    max_drug_effect_vanco, max_drug_effect_linez = 0.8, 0.9\n",
+    "    max_drug_effect_vanco, max_drug_effect_linez = 0.8, 0.95  # Increased linezolid efficacy \n",
     "    k = 1e5\n",
     "\n",
     "    def population_ode(t, r):\n",
@@ -119,64 +127,74 @@
     "        method='RK45',\n",
     "    )\n",
     "\n",
-    "    # Plot Results\n",
-    "    plt.figure(figsize=(15, 10))\n",
+    "    # Plot Results if requested\n",
+    "    if show_plots:\n",
+    "        plt.figure(figsize=(15, 10))\n",
     "\n",
-    "    plt.subplot(3, 1, 1)\n",
-    "    plt.plot(time, solution.y[0], label=f'Sensitive Population (ρ={rho_sensitive:.2f})')\n",
-    "    plt.plot(time, solution.y[1], label=f'Resistant Population (ρ={rho_resistant:.2f})')\n",
-    "    plt.axvline(no_drug_period, color='g', linestyle='--', label='Vancomycin Start')\n",
-    "    plt.axvline(no_drug_period + pk_model.van_duration, color='r', linestyle='--', label='Linezolid Start')\n",
-    "    plt.title(f'Population Dynamics (Resistance Fitness Cost: {fitness_cost*100}%)')\n",
-    "    plt.xlabel('Time (hours)')\n",
-    "    plt.ylabel('Population')\n",
-    "    plt.legend()\n",
-    "    plt.grid(True)\n",
+    "        plt.subplot(3, 1, 1)\n",
+    "        plt.plot(time, solution.y[0], label=f'Sensitive Population (ρ={rho_sensitive:.2f})')\n",
+    "        plt.plot(time, solution.y[1], label=f'Resistant Population (ρ={rho_resistant:.2f})')\n",
+    "        plt.axvline(no_drug_period, color='g', linestyle='--', label='Vancomycin Start')\n",
+    "        plt.axvline(no_drug_period + pk_model.van_duration, color='r', linestyle='--', label='Linezolid Start')\n",
+    "        plt.title(f'Population Dynamics (Resistance Fitness Cost: {fitness_cost*100}%)')\n",
+    "        plt.xlabel('Time (hours)')\n",
+    "        plt.ylabel('Population')\n",
+    "        plt.legend()\n",
+    "        plt.grid(True)\n",
     "\n",
-    "    plt.subplot(3, 1, 2)\n",
-    "    plt.plot(time, conc_vancomycin_interp, label='Vancomycin Concentration')\n",
-    "    plt.plot(time, conc_linezolid_interp, label='Linezolid Concentration')\n",
-    "    plt.axvline(no_drug_period, color='g', linestyle='--')\n",
-    "    plt.axvline(no_drug_period + pk_model.van_duration, color='r', linestyle='--')\n",
-    "    plt.title('Drug Concentrations')\n",
-    "    plt.xlabel('Time (hours)')\n",
-    "    plt.ylabel('Concentration (mg/L)')\n",
-    "    plt.legend()\n",
-    "    plt.grid(True)\n",
+    "        plt.subplot(3, 1, 2)\n",
+    "        plt.plot(time, conc_vancomycin_interp, label='Vancomycin Concentration')\n",
+    "        plt.plot(time, conc_linezolid_interp, label='Linezolid Concentration')\n",
+    "        plt.axvline(no_drug_period, color='g', linestyle='--')\n",
+    "        plt.axvline(no_drug_period + pk_model.van_duration, color='r', linestyle='--')\n",
+    "        plt.title('Drug Concentrations')\n",
+    "        plt.xlabel('Time (hours)')\n",
+    "        plt.ylabel('Concentration (mg/L)')\n",
+    "        plt.legend()\n",
+    "        plt.grid(True)\n",
     "\n",
-    "    plt.subplot(3, 1, 3)\n",
-    "    plt.plot(time, conc_vancomycin_interp / (conc_vancomycin_interp + EC_50_vanco), \n",
-    "             label='Vancomycin Inhibition')\n",
-    "    plt.plot(time, conc_linezolid_interp / (conc_linezolid_interp + EC_50_linez), \n",
-    "             label='Linezolid Inhibition')\n",
-    "    plt.axvline(no_drug_period, color='g', linestyle='--')\n",
-    "    plt.axvline(no_drug_period + pk_model.van_duration, color='r', linestyle='--')\n",
-    "    plt.title('Drug Inhibition Over Time')\n",
-    "    plt.xlabel('Time (hours)')\n",
-    "    plt.ylabel('Inhibition')\n",
-    "    plt.legend()\n",
-    "    plt.grid(True)\n",
+    "        plt.subplot(3, 1, 3)\n",
+    "        plt.plot(time, conc_vancomycin_interp / (conc_vancomycin_interp + EC_50_vanco), \n",
+    "                label='Vancomycin Inhibition')\n",
+    "        plt.plot(time, conc_linezolid_interp / (conc_linezolid_interp + EC_50_linez), \n",
+    "                label='Linezolid Inhibition')\n",
+    "        plt.axvline(no_drug_period, color='g', linestyle='--')\n",
+    "        plt.axvline(no_drug_period + pk_model.van_duration, color='r', linestyle='--')\n",
+    "        plt.title('Drug Inhibition Over Time')\n",
+    "        plt.xlabel('Time (hours)')\n",
+    "        plt.ylabel('Inhibition')\n",
+    "        plt.legend()\n",
+    "        plt.grid(True)\n",
     "\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()\n",
     "\n",
     "    return solution, time, conc_vancomycin_interp, conc_linezolid_interp\n",
     "\n",
-    "# Run the simulation with the calculated concentrations\n",
+    "# Run the simulation with the calculated concentrations with plots enabled\n",
     "solution, time, van_conc, lzd_conc = simulate_drug_dynamics(\n",
     "    EC_50_vanco=0.8,\n",
-    "    EC_50_linez=2.0,  # Increased to a more realistic value\n",
+    "    EC_50_linez=1.2,  # Updated to reflect clinical MIC values for linezolid\n",
     "    fitness_cost=0.3,\n",
-    "    no_drug_period=48  # 48-hour no-drug period\n",
+    "    no_drug_period=48,  # 48-hour no-drug period\n",
+    "    show_plots=True\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18ae48b9-b70a-4355-9eb2-3822fcc2c136",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -192,5 +210,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
